--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-streamlit
-transformers
-torch
-accelerate
+streamlit>=1.28.0
+transformers>=4.35.0
+torch>=2.0.0
+accelerate>=0.24.0
+pandas>=1.5.0
+numpy>=1.21.0
+plotly>=5.15.0
+scikit-learn>=1.2.0
